Fix pixel shifting on desktop grid

--- a/_sass/grid.scss
+++ b/_sass/grid.scss
@@ -22,7 +22,13 @@
 /*  GRID OF THREE  */
 .span_3_of_3 { width: 100%; }
 .span_2_of_3 { width: 66.13%; }
-.span_1_of_3 { width: 30.33%; }
+.span_1_of_3 { 
+	width: 30.33%; 
+
+    @media (min-width: 1920px) {
+    	height: 492px;
+    }
+}
 
 /*  GO FULL WIDTH BELOW 480 PIXELS */
 @media only screen and (max-width: $medium-only) {
